--- a/source/index.html
+++ b/source/index.html
@@ -4,4 +4,16 @@ title: S1SYPHOS
 ---
 <div class="container">
 	<h1>χαλεπὰ τὰ καλά.</h1>
+
+	<div class="wrapper">
+	  <div class="toggle">
+	    <input class="toggle-input" type="checkbox" />
+	    <div class="toggle-bg"></div>
+	    <div class="toggle-switch">
+	      <div class="toggle-switch-figure"></div>
+	      <div class="toggle-switch-figureAlt"></div>
+	    </div>
+	  </div>
+	</div>
+
 </div>
