--- a/source/index.html
+++ b/source/index.html
@@ -3,17 +3,10 @@ layout: default
 title: S1SYPHOS
 ---
 <div class="container">
-	<h1>χαλεπὰ τὰ καλά.</h1>
-
-	<div class="wrapper">
-	  <div class="toggle">
-	    <input class="toggle-input" type="checkbox" />
-	    <div class="toggle-bg"></div>
-	    <div class="toggle-switch">
-	      <div class="toggle-switch-figure"></div>
-	      <div class="toggle-switch-figureAlt"></div>
-	    </div>
-	  </div>
+	<div class="fixed-content">
+		
 	</div>
+	<div class="scroll-content">
 
+	</div>
 </div>
