Gotta go to bed, dunno what I'm doin

--- a/source/index.html
+++ b/source/index.html
@@ -4,9 +4,9 @@ title: S1SYPHOS
 ---
 <div class="container">
 	<div class="scroll-content">
-
+		<h1>Heading 1</h1>
 	</div>
 	<div class="fixed-content">
-		
+		<h1>Heading 2</h1>
 	</div>
 </div>
