--- a/source/index.html
+++ b/source/index.html
@@ -3,10 +3,11 @@ layout: default
 title: S1SYPHOS
 ---
 <div class="container">
-	<div class="scroll-content">
-		<h1>Heading 1</h1>
-	</div>
 	<div class="fixed-content">
-		<h1>Heading 2</h1>
+		<div class="fixed-content__wrap">
+			<h1>Heading 1</h1><h1>Heading 1</h1><h1>Heading 1</h1><h1>Heading 1</h1><h1>Heading 1</h1>
+		</div>	</div>
+	<div class="scroll-content">
+		<h1>Heading 1</h1><h1>Heading 1</h1><h1>Heading 1</h1><h1>Heading 1</h1><h1>Heading 1</h1>
 	</div>
 </div>
