Finished appearence of terminal

--- a/source/index.html
+++ b/source/index.html
@@ -15,9 +15,7 @@ title: S1SYPHOS
     </div>
 		</div>
     <div class="terminal__shell">
-      <p><span class="path">~</span><span class="prompt">$</span>git add --all</p>
-      <p><span class="path">~</span><span class="prompt">$</span>git commit -m "Initial commit"</p>
-      <p><span class="path">~</span><span class="prompt">$</span>git push -u origin master</p>
+      <p><span class="path">[user@daktylos.net ~]</span><span class="prompt">$</span>whois S1SYPHOS</p>
     </div>
   </div>
 </div>
