Finished simplified layout (not fully responsive yet)

--- a/source/index.html
+++ b/source/index.html
@@ -2,10 +2,13 @@
 layout: default
 title: S1SYPHOS
 ---
-<div class="container">
-	<header class="header">
+<header class="site-header" role="banner">
+	<div class="container">
+		<h1>daktylos - keep going</h1>
+	</div>
+</header>
 
-	</header>
+<main class="content" role="content">
 	<div class="terminal">
     <div class="terminal__header">
 			<div class="terminal__header--controls">
@@ -15,7 +18,16 @@ title: S1SYPHOS
     </div>
 		</div>
     <div class="terminal__shell">
-      <p><span class="path">[user@daktylos.net ~]</span><span class="prompt">$</span>whois S1SYPHOS</p>
+			<p><span class="terminal__shell--path">[user@daktylos.net ~]</span><span class="terminal__shell--prompt">$</span><span class="css_blink">_</span> <span class="jquery_blink">_</span></p>
+			<p><span class="terminal__shell--path">[user@daktylos.net ~]</span><span class="terminal__shell--prompt">$</span><span class="css_blink">_</span> <span class="jquery_blink">_</span></p>
+			<p><span class="terminal__shell--path">[user@daktylos.net ~]</span><span class="terminal__shell--prompt">$</span><span class="css_blink">_</span> <span class="jquery_blink">_</span></p>
+			<p><span class="terminal__shell--path">[user@daktylos.net ~]</span><span class="terminal__shell--prompt">$</span><span class="css_blink">_</span> <span class="jquery_blink">_</span></p>
     </div>
   </div>
-</div>
+</main>
+
+<footer class="site-footer" role="contentinfo">
+	<div class="container">
+		<h1>call-me</h1>
+	</div>
+</footer>
