--- a/source/index.html
+++ b/source/index.html
@@ -18,10 +18,10 @@ title: S1SYPHOS
     </div>
 		</div>
     <div class="terminal__shell">
-			<p><span class="terminal__shell--path">[user@daktylos.net ~]</span><span class="terminal__shell--prompt">$</span><span class="css_blink">_</span> <span class="jquery_blink">_</span></p>
-			<p><span class="terminal__shell--path">[user@daktylos.net ~]</span><span class="terminal__shell--prompt">$</span><span class="css_blink">_</span> <span class="jquery_blink">_</span></p>
-			<p><span class="terminal__shell--path">[user@daktylos.net ~]</span><span class="terminal__shell--prompt">$</span><span class="css_blink">_</span> <span class="jquery_blink">_</span></p>
-			<p><span class="terminal__shell--path">[user@daktylos.net ~]</span><span class="terminal__shell--prompt">$</span><span class="css_blink">_</span> <span class="jquery_blink">_</span></p>
+			<p><span class="terminal__shell--path">[daktylos.net ~]</span><span class="terminal__shell--prompt">$</span>work in progress</p>
+			<p><span class="terminal__shell--path">[daktylos.net ~]</span><span class="terminal__shell--prompt">$</span>work in progress</p>
+			<p><span class="terminal__shell--path">[daktylos.net ~]</span><span class="terminal__shell--prompt">$</span>work in progress</p>
+			<p><span class="terminal__shell--path">[daktylos.net ~]</span><span class="terminal__shell--prompt">$</span>work in progress</p>
     </div>
   </div>
 </main>
