Minor fixes in development workflow

--- a/source/index.html
+++ b/source/index.html
@@ -12,9 +12,9 @@ title: S1SYPHOS
 	<div class="terminal">
     <div class="terminal__header">
 			<div class="terminal__header--controls">
-				<button class="btn--close">close</button>
-    		<button class="btn--minimize">minimize</button>
-    		<button class="btn--maximize">maximize</button>
+				<button class="terminal-button--close">close</button>
+    		<button class="terminal-button--minimize">minimize</button>
+    		<button class="terminal-button--maximize">maximize</button>
     </div>
 		</div>
     <div class="terminal__shell">
