Minor changes / fixes

--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@ title: S1SYPHOS
 ---
 <header class="site-header" role="banner">
 	<div class="container">
-		<h1>daktylos - keep going</h1>
+		<h1 style="display:none">insert svg-logo stuff</h1>
 	</div>
 </header>
 
@@ -28,6 +28,6 @@ title: S1SYPHOS
 
 <footer class="site-footer" role="contentinfo">
 	<div class="container">
-		<h1>call-me</h1>
+		<h1 style="display:none">insert contact stuff</h1>
 	</div>
 </footer>
