--- a/source/index.html
+++ b/source/index.html
@@ -2,24 +2,6 @@
 layout: default
 title: S1SYPHOS
 ---
-<script type="text/javascript">
-	$(document).ready(function() {
-		$( '.type-text' ).each( function() {
-			var items = $( this ).attr( 'title' ) + ';' + $( this ).text();
-			var thing = $( this ).empty().attr( 'title', '' ).teletype( {
-				text: items.split( ';' ),
-				typeDelay: 10,
-				backDelay: 20,
-				cursor: '▋',
-				delay: 3000,
-				preserve: true,
-				prefix: '<span class="terminal__shell--path">[daktylos.net ~]</span><span class="terminal__shell--prompt">$</span>',
-				loop: 1
-			} );
-		} );
-	} );
-</script>
-
 <header class="site-header" role="banner">
 	<div class="container">
 		<h1 style="display:none">insert svg-logo stuff</h1>
@@ -36,8 +18,7 @@ title: S1SYPHOS
     </div>
 		</div>
     <div class="terminal__shell">
-			<p><span class="terminal__shell--path">[daktylos.net ~]</span><span class="terminal__shell--prompt">$</span>work in progress</p>
-			<p class="type-text" title="this is a work in progress.\n"></p>
+			<p class="type-text" title="this is a work in progress^400.^800.^800.^1600\n;but if you'd like to visit me on github^1800~18send me an email^1350~27 just want to get in touch,^1400 click on the links below.^1700\n">cheers!^2350\n</p>
   	</div>
   </div>
 </main>
