--- a/source/index.html
+++ b/source/index.html
@@ -1,30 +1,6 @@
 ---
 layout: default
 title: S1SYPHOS
+slug: home
 ---
-<header class="site-header" role="banner">
-	<div class="container">
-		<h1 style="display:none">insert svg-logo stuff</h1>
-	</div>
-</header>
-
-<main class="content" role="content">
-	<div class="terminal">
-    <div class="terminal__header">
-			<div class="terminal__header--controls">
-				<button class="terminal-button--close">close</button>
-    		<button class="terminal-button--minimize">minimize</button>
-    		<button class="terminal-button--maximize">maximize</button>
-    </div>
-		</div>
-    <div class="terminal__shell">
-			<p class="type-text" title="this is a work in progress^400.^800.^800.^1600\n;but if you'd like to visit me on github^1800~18send me an (encrypted) email^1350~39 just want to get in touch,^1400 click the links below.^1700\n">cheers!^2350\n</p>
-  	</div>
-  </div>
-</main>
-
-<footer class="site-footer" role="contentinfo">
-	<div class="container">
-		<h1 style="display:none">insert contact stuff</h1>
-	</div>
-</footer>
+<p>HAHA FOOL</p>
