ready for merge

--- a/source/index.html
+++ b/source/index.html
@@ -3,4 +3,10 @@ layout: default
 title: S1SYPHOS
 slug: home
 ---
-<p>HAHA FOOL</p>
+<div class="container">
+
+HAHA FOOL
+
+<img src="http://placehold.it/350x1500">
+
+</div>
